--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -5,3 +5,7 @@
 @em-blue: #428bca;
 @em-blue-disabled: #c6dcef;
 @em-completed: #AFAFAF;
+@em-gray: #8E8E93;
+@em-darkgray: #B6BBBA;
+@em-red: #E22C09;
+@em-green: #4ECE3A;
