Fixed rounding, triangle to light blue

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -198,6 +198,15 @@ input[type="checkbox"].em-input-checkbox:checked + span {
   background: white;
 }
 
+.em-minus {
+  font-size: 14px;
+  border-color: #cccccc;
+  border-radius: 50%;
+  background: white;
+  padding-right: 0.95em;
+  padding-left: 0.95em;
+}
+
 .em-big-button {
   font-size: 24px;
   color: @em-blue;
@@ -217,6 +226,11 @@ input[type="checkbox"].em-input-checkbox:checked + span {
   border-color: @em-blue;
   font-size: 16px;
   font-weight: bold;
+}
+
+#em-letter-n{
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;  
 }
 
 .em-feature {
@@ -322,4 +336,8 @@ input[type=checkbox].em-input-checkbox:checked + .em-input-text {
 
 .em-tiny-left-margin {
   margin-left: 8px;
+}
+
+#em-triangle{
+  color: @em-lightblue !important;
 }
