--- a/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
@@ -9,7 +9,7 @@
           <a class="em-feature" href="{{prefix}}/tasks">project</a>
         </li>
         <li id="em-addnewbutton">
-          <button type="button" class="btn em-plus" ng-click="addNew()">+</button>
+          <button type="button" class="btn em-symbol" ng-click="addNew()">+</button>
         </li>
       </ul>
     </div>
