--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -5,9 +5,11 @@
       <ul class="nav navbar-nav nav-justified">
         <li id="em-taskslink" ng-hide="mainlinksFilter"><a class="em-feature" href="{{prefix}}/tasks"><span class="em-icon">t</span>tasks</a></li>
         <li id="em-menubutton">
-          <button type="button" class="em-simple-input" ng-click="collapseNavbar()">&#x25B2;</button>
+          <button id="em-triangle" type="button" class="em-simple-input" ng-click="collapseNavbar()">&#x25B2;</button>
         </li>
-        <li id="em-noteslink" ng-hide="mainlinksFilter"><a href="" class="em-feature-disabled"><span class="em-icon">n</span>notes</a></li>
+        <li id="em-noteslink" ng-hide="mainlinksFilter">
+          <a href="" class="em-feature-disabled"><span id="em-letter-n"class="em-icon">n</span>notes</a>
+        </li>
       </ul>
     </div>
 
