--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -3,6 +3,7 @@
 // padding: 0 15px; // http://getbootstrap.com/css/#grid
 @em-page-padding: 15px;
 @em-blue: #428bca;
+@em-lightblue: #7aadd9;
 @em-blue-disabled: #c6dcef;
 @em-completed: #AFAFAF;
 @em-gray: #8E8E93;
