--- a/frontend/core/src/main/webapp/static/partials/my/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/edit.html
@@ -9,7 +9,7 @@
                     <a class="em-feature" href="{{prefix}}/tasks">edit</a>
                 </li>
                 <li id="em-addnewbutton">
-                    <button type="button" class="btn em-plus" ng-click="cancelEdit()">-</button>
+                    <button type="button" class="btn em-minus" ng-click="cancelEdit()">-</button>
                 </li>
             </ul>
         </div>
