--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
@@ -2,8 +2,8 @@
 
     <div class="form-group">
         <label class="sr-only" for="taskTitle">title</label>
-        <div class="col-lg-10">
-            <input type="text" class="form-control em-simple-input em-tiny-left-margin" id="taskTitle" ng-model="subtask.title" placeholder="add task...">
+        <div>
+            <input type="text" class="form-control em-simple-input" id="taskTitle" ng-model="subtask.title" placeholder="add task...">
         </div>
     </div>
 
