--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/filteredTasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/filteredTasksList.html
@@ -5,9 +5,9 @@
 
         <li ng-class="selected" ng-repeat="task in tasks | filter:{title:tasksListFilter}">
 
-            <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="em-input-checkbox" ng-checked="task.completed" ng-click="taskChecked(task)" />
+            <input type="checkbox" name="checkbox" id="{{task.uuid}}" class="em-input-checkbox" ng-checked="task.completed" ng-click="taskChecked(task)" />
 
-            <label class="em-input-text em-checkbox" id="checkbox{{$index}}" for="checkbox{{$index}}"></label>
+            <label class="em-input-text em-checkbox" id="{{task.uuid}}" for="{{task.uuid}}"></label>
             <span>{{task.title}}</span>
             
         </li>
