--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/task.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/task.html
@@ -1,6 +1,6 @@
 <div>
 
-    <input type="checkbox" name="checkbox" id="{{task.uuid}}" class="em-input-checkbox" ng-checked="{{task.completed}}" ng-click="taskChecked(task)" />
+    <input type="checkbox" name="checkbox" id="{{task.uuid}}" class="em-input-checkbox" ng-checked="task.completed" ng-click="taskChecked(task)" />
 
     <label class="em-input-text em-checkbox" id="{{task.uuid}}" for="{{task.uuid}}"></label>
     <span  ng-click="toggleTaskContent()">{{task.title}}</span>
