Show inbox items in omnibar search. Moved item array handling from controller into service. Newitem is cleared instantly from scope when add button is clicked.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -7,7 +7,7 @@
   <div class="row em-omnibar" omni-bar></div>
 
   <div class="row em-inbox" items-list itemsfilter="newItem.title">
-    <a href="" ng-click="toggleItemsList()">inbox</a>
+    <a href="">inbox</a>
     <span class="text-muted">{{items.length}}</span>
     <span class="pull-right"><small>{{completed}}</small></span>
   </div>
