--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemsList.html
@@ -1,19 +1,19 @@
 <div>
 
-  <div ng-show="(items != 0)" ng-transclude></div>
+    <div ng-transclude></div>
 
-  <ul class="list-unstyled" ng-show="showItemsList">
+    <ul class="list-unstyled" ng-show="itemsListFilter" >
 
-    <li ng-class="selected" ng-repeat="item in items | filter:newItem">
+        <li ng-class="selected" ng-repeat="item in items | filter:{title:itemsListFilter}">
 
-      <div ng-click="toggleItemContent()">
-        <span>{{item.title}}</span>
-      </div>
+            <div ng-click="toggleItemContent()">
+                <span>{{item.title}}</span>
+            </div>
 
-      <div item-content ng-show="showItemContent"></div>
+            <div item-content ng-show="showItemContent"></div>
 
-    </li>
+        </li>
 
-  </ul>
+    </ul>
 
 </div>
