--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/filteredTasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/filteredTasksList.html
@@ -1,16 +1,13 @@
 <div>
-    <div ng-show="tasksListFilter" ng-transclude></div>
+  <div ng-show="tasksListFilter" ng-transclude></div>
 
-    <ul class="list-unstyled" ng-show="tasksListFilter">
+  <ul class="list-unstyled" ng-show="tasksListFilter">
 
-        <li ng-class="selected" ng-repeat="task in tasks | filter:{title:tasksListFilter}">
+    <li ng-class="selected" ng-repeat="task in tasks | filter:{title:tasksListFilter}">
 
-            <input type="checkbox" name="checkbox" id="{{task.uuid}}" class="em-input-checkbox" ng-checked="task.completed" ng-click="taskChecked(task)" />
+      <div task></div>
 
-            <label class="em-input-text em-checkbox" id="{{task.uuid}}" for="{{task.uuid}}"></label>
-            <span>{{task.title}}</span>
-            
-        </li>
+    </li>
 
-    </ul>
+  </ul>
 </div>
