increased clickable area in footer links

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -151,6 +151,7 @@ ul.em-headers {
 .em-filtered-items {
   a {
     color: @em-blue;
+    padding-top: 15px;
   }
 }
 
@@ -240,7 +241,7 @@ ul.em-headers {
 .em-feature-disabled {
   color: @em-blue-disabled !important;
   .em-icon {
-  border-color: @em-blue-disabled;
+    border-color: @em-blue-disabled;
   }
 }
 
@@ -331,7 +332,7 @@ input[type=checkbox].em-input-checkbox:checked + .em-input-text {
 .em-checkbox{background-image:url(../img/checkbox.png); }
 
 .form-group > label, .form-group > span {
-   font-size: 26px !important;
+ font-size: 26px !important;
 }
 
 #em-triangle{
