--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -3,7 +3,11 @@
 
     <div class="row em-mainlinks">
       <ul class="nav navbar-nav nav-justified">
-        <li id="em-taskslink" ng-hide="mainlinksFilter"><a class="em-feature" href="{{prefix}}/tasks"><span class="em-icon">t</span>tasks</a></li>
+        <li id="em-taskslink" ng-hide="mainlinksFilter">
+          <a class="em-feature" href="{{prefix}}/tasks">
+            <span class="em-icon">t</span>tasks
+          </a>
+        </li>
         <li id="em-menubutton">
           <button id="em-triangle" type="button" class="em-simple-input" ng-click="collapseNavbar()">&#x25B2;</button>
         </li>
