--- a/frontend/core/src/main/webapp/static/less/em-bootstrap-fixes.less
+++ b/frontend/core/src/main/webapp/static/less/em-bootstrap-fixes.less
@@ -50,8 +50,10 @@
 // to show the headers ok, but clicking on the
 // links did not work -> every link was on the
 // leftmost slide.
-.navbar-fixed-top, .navbar-fixed-bottom {
-  position: absolute;
+.em-slides {
+  .navbar-fixed-top, .navbar-fixed-bottom {
+    position: absolute;
+  }
 }
 
 // Override Bootstrap active link color
