Fix 'When click tasks on /my and already in task carousel, just transition right instead of full load.

--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -4,7 +4,7 @@
     <div class="row em-mainlinks">
       <ul class="nav navbar-nav nav-justified">
         <li id="em-taskslink" ng-hide="mainlinksFilter">
-          <a class="em-feature" href="{{prefix}}/tasks">
+          <a class="em-feature" href="{{prefix}}/tasks" ng-click="nextSlide()">
             <span class="em-icon">t</span>tasks
           </a>
         </li>
