Fix 'Hide empty inbox'.

--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemsList.html
@@ -1,6 +1,6 @@
 <div>
 
-    <div ng-transclude></div>
+    <div ng-transclude ng-show="(items.length != 0)"></div>
 
     <ul class="list-unstyled" ng-show="itemsListFilter" >
 
