--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -7,7 +7,7 @@
   <div class="row em-omnibar" omni-bar></div>
 
   <div class="row em-inbox" items-list itemsfilter="newItem.title">
-    <a href="">inbox</a>
+    <a href="{{prefix}}/inbox">inbox</a>
     <span class="text-muted">{{items.length}}</span>
     <span class="pull-right"><small>{{completed}}</small></span>
   </div>
