Added option to set html5Mode to false with global variable. Added #/ in front of links in templates to make code work with both on and off versions of html5 mode

--- a/frontend/core/src/main/webapp/static/partials/collective.html
+++ b/frontend/core/src/main/webapp/static/partials/collective.html
@@ -1,5 +1,5 @@
 <div class="em-slide">
-  
+
   <div navbar></div>
 
   <div class="em-front">
@@ -15,11 +15,11 @@
   </div>
 
     <div class="navbar-fixed-bottom pull-left" filtered-notes-list notesfilter="newItem.title">
-      <h2><a class="text-muted" href="my/notes">notes</a></h2>
+      <h2><a class="text-muted" href="#/my/notes">notes</a></h2>
     </div>
 
     <div class="navbar-fixed-bottom pull-right" filtered-tasks-list tasksfilter="newItem.title">
-      <h2><a class="text-muted" href="my/tasks">tasks</a></h2>
+      <h2><a class="text-muted" href="#/my/tasks">tasks</a></h2>
     </div>
   </div>
 
