--- a/frontend/core/src/main/webapp/static/partials/my/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/edit.html
@@ -3,10 +3,10 @@
         <div class="container">
             <ul class="nav navbar-nav nav-justified">
                 <li id="em-iconlink">
-                    <a href="{{prefix}}"><span class="em-icon">t</span></a>
+                    <a href="#/{{prefix}}"><span class="em-icon">t</span></a>
                 </li>
                 <li id="em-featurelink">
-                    <a class="em-feature" href="{{prefix}}/tasks">edit</a>
+                    <a class="em-feature" href="#/{{prefix}}/tasks">edit</a>
                 </li>
                 <li id="em-addnewbutton">
                     <button type="button" class="btn em-minus" ng-click="cancelEdit()">-</button>
