--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/project.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/project.html
@@ -1,1 +1,1 @@
-<span><a class="text-muted" href="{{prefix}}/tasks/project/{{task.uuid}}">{{task.title}}</a></span>
+<span><a class="text-muted" href="#/{{prefix}}/tasks/project/{{task.uuid}}">{{task.title}}</a></span>
