--- a/frontend/core/src/main/webapp/static/partials/templates/urlList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/urlList.html
@@ -1,8 +1,8 @@
 <ul class="list-inline">
   <li>
-    <h2><a class="text-muted" href="{{prefix}}/notes">notes</a></h2>
+    <h2><a class="text-muted" href="#/{{prefix}}/notes">notes</a></h2>
   </li>
   <li>
-    <h2><a class="text-muted" href="{{prefix}}/tasks">tasks</a></h2>
+    <h2><a class="text-muted" href="#/{{prefix}}/tasks">tasks</a></h2>
   </li>
 </ul>
