--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -13,11 +13,11 @@
   </div>
 
   <div class="row em-filtered-items" filtered-notes-list notesfilter="newItem.title">
-    <h3><a class="text-muted" href="{{prefix}}/notes">notes</a></h3>
+    <h3><a class="text-muted" href="#/{{prefix}}/notes">notes</a></h3>
   </div>
 
   <div class="row em-filtered-items" filtered-tasks-list tasksfilter="newItem.title">
-    <h3><a class="text-muted" href="{{prefix}}/tasks">tasks</a></h3>
+    <h3><a class="text-muted" href="#/{{prefix}}/tasks">tasks</a></h3>
   </div>
 
   <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
