--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -4,7 +4,7 @@
     <div class="row em-mainlinks">
       <ul class="nav navbar-nav nav-justified">
         <li id="em-taskslink" ng-hide="mainlinksFilter">
-          <a class="em-feature" href="{{prefix}}/tasks" ng-click="nextSlide()">
+          <a class="em-feature" href="#/{{prefix}}/tasks" ng-click="nextSlide()">
             <span class="em-icon">t</span>tasks
           </a>
         </li>
@@ -20,7 +20,7 @@
     <div class="row" ng-show="collapse">
       <ul>
         <li>
-          <a href="my" ng-click="setActiveUuid(user)">home</a>
+          <a href="#/my" ng-click="setActiveUuid(user)">home</a>
         </li>
         <li>
           <span>collectives</span>
@@ -33,7 +33,7 @@
           </ul>
         </li>
         <li>
-          <a href="my/account">account</a>
+          <a href="#/my/account">account</a>
         </li>
         <li>
           <a href="" ng-click="logout()">logout</a>
