--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemContent.html
@@ -1,29 +1,66 @@
-<div class="em-item-actions container">
-  <div class="row">
-    <ul class="nav nav-justified em-horizontal-buttons">
-      <li class="em-gray-button" ng-hide="mainlinksFilter">
-        <button class="em-simple-input" type="button" ng-click="editNewTag()">
-          tag
-        </button>
-      </li>
-      <li class="em-gray-button">
-        <button class="em-simple-input" type="button" ng-click="itemToNote(item)">
-          note
-        </button>
-      </li>
-      <li class="em-gray-button">
-        <button class="em-simple-input" type="button" ng-click="itemToTask(item)">
-          task
-        </button>
-      </li>
-      <li class="em-red-button">
-        <button class="em-simple-input" type="button" ng-click="deleteItem(item)">
-          delete
-        </button>
-      </li>
-    </ul>
+
+<div ng-switch="itemType">
+
+  <div ng-switch-default>
+
+    <div class="em-item-actions container">
+      <div class="row">
+        <ul class="nav nav-justified em-horizontal-buttons">
+          <li class="em-gray-button">
+            <button class="em-simple-input" type="button" ng-click="itemToNote(item)">
+              note
+            </button>
+          </li>
+          <li class="em-gray-button">
+            <button class="em-simple-input" type="button" ng-click="itemToTask(item)">
+              task
+            </button>
+          </li>
+          <li class="em-red-button">
+            <button class="em-simple-input" type="button" ng-click="deleteItem(item)">
+              delete
+            </button>
+          </li>
+        </ul>
+      </div>
+
+    </div>
   </div>
-  <div class="row">
-    <div ng-show="showEditNewTag" new-tag></div>
+
+  <div ng-switch-when="task">
+
+    <div class="form-group">
+      <label class="sr-only" for="taskContext">context</label>
+      <div class="col-lg-10">
+        <select class="form-control em-simple-input" id="taskContext" ng-model="taskContext" ng-options="context.title for context in contexts" ng-hide="task.project">
+          <option value="">select context...</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="sr-only" for="taskParent">parent</label>
+      <div class="col-lg-10">
+        <select class="form-control em-simple-input" id="taskParent" ng-model="task.relationships.parentTask" ng-options="project.uuid as project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
+          <option value="">select project...</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="em-item-actions container">
+      <ul class="nav nav-justified em-horizontal-buttons">
+        <li class="em-gray-button">
+          <button class="em-simple-input" type="button" ng-click="taskEditMore(task)">
+            more
+          </button>
+        </li>
+        <li class="em-green-button">
+          <button class="em-simple-input" type="button" ng-click="taskEditDone(task)">
+            done
+          </button>
+        </li>
+      </ul>
+    </div>
   </div>
+
 </div>
