--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
@@ -18,7 +18,7 @@
   <div class="form-group">
     <label class="sr-only" for="taskParent">parent</label>
     <div class="col-lg-10">
-      <select class="form-control em-simple-input" id="taskParent" ng-model="parentTask" ng-options="project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
+        <select class="form-control em-simple-input" id="taskParent" ng-model="task.relationships.parentTask" ng-options="project.uuid as project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
         <option value="">select project...</option>
       </select>
     </div>
@@ -27,7 +27,7 @@
   <div class="form-group">
     <label class="sr-only" for="taskContext">context</label>
     <div class="col-lg-10">
-      <select class="form-control em-simple-input" id="taskContext" ng-model="taskContext" ng-options="context.title for context in contexts" ng-hide="task.project">
+      <select class="form-control em-simple-input" id="taskContext" ng-model="task.relationships.tags[0]" ng-options="context.uuid as context.title for context in contexts" ng-hide="task.project">
         <option value="">select context...</option>
       </select>
     </div>
