Date input fixes.

--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/date.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/date.html
@@ -1,1 +1,1 @@
-<input type="date" id="asd" class="form-control em-simple-input" id="taskDue" ng-model="task.due">
+<input type="date" id="taskDue" class="form-control em-simple-input" ng-model="task.due">
