--- a/frontend/core/src/main/webapp/static/partials/my/inbox.html
+++ b/frontend/core/src/main/webapp/static/partials/my/inbox.html
@@ -3,10 +3,10 @@
     <div class="container">
       <ul class="nav navbar-nav nav-justified">
         <li id="em-iconlink">
-          <a href="" ng-click="gotoHome()"><span class="em-icon">i</span></a>
+          <a href ng-click="gotoHome()"><span class="em-icon">i</span></a>
         </li>
         <li id="em-featurelink">
-          <a class="em-feature" href="" ng-click="prevSlide()">inbox</a>
+          <a class="em-feature" href ng-click="prevSlide()">inbox</a>
         </li>
       </ul>
     </div>
