--- a/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
@@ -3,10 +3,10 @@
 
     <ul class="nav navbar-nav nav-justified">
       <li id="em-iconlink">
-        <a href="" ng-click="gotoHome()"><span class="em-icon">t</span></a>
+        <a href ng-click="gotoHome()"><span class="em-icon">t</span></a>
       </li>
       <li id="em-featurelink">
-        <a class="em-feature" href="" ng-click="prevSlide()">date</a>
+        <a class="em-feature" href ng-click="prevSlide()">date</a>
       </li>
       <li id="em-addnewbutton">
         <button type="button" class="btn em-plus" ng-click="addNew()">+</button>
