--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -2,10 +2,10 @@
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <ul class="nav navbar-nav nav-justified">
       <li id="em-iconlink">
-        <a href="" ng-click="gotoHome()"><span class="em-icon">t</span></a>
+        <a href ng-click="gotoHome()"><span class="em-icon">t</span></a>
       </li>
       <li id="em-featurelink">
-        <a class="em-feature" href="" ng-click="nextSlide()">home</a>
+        <a class="em-feature" href ng-click="nextSlide()">home</a>
       </li>
       <li id="em-addnewbutton">
         <button type="button" class="btn em-plus" ng-click="addNew()">+</button>
