Switched angular carousel to idangero.us swiper.

--- a/frontend/core/src/main/webapp/static/partials/mySlides.html
+++ b/frontend/core/src/main/webapp/static/partials/mySlides.html
@@ -1,5 +1,7 @@
-<ul class="em-slides em-tasks-active" em-carousel em-carousel-index="slide">
-    <li class="container em-slide" my></li>
-    <li class="container em-slide" tasks></li>
-    <li class="container em-slide" today></li>
-</ul>
+<div class="swiper-container" swiper-directive>
+  <div class="swiper-wrapper">
+    <div class="swiper-slide" my></div>
+    <div class="swiper-slide" tasks></div>
+    <div class="swiper-slide" today></div>
+  </div>
+</div>
