--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-  <div class="container">
+  <!-- <div class="container"> -->
 
     <div class="row em-mainlinks">
       <ul class="nav navbar-nav nav-justified">
@@ -41,5 +41,5 @@
       </ul>
     </div>
 
-  </div>
+  <!-- </div> -->
 </nav>
