--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,4 +1,4 @@
-<div id="em-feature-header-tasks" class="row em-feature-header">
+<!-- <div id="em-feature-header-tasks" class="row em-feature-header">
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <ul class="nav navbar-nav nav-justified">
       <li id="em-iconlink">
@@ -12,7 +12,7 @@
       </li>
     </ul>
   </nav>
-</div>
+</div> -->
 
 <div class="row em-scrollable-bottom">
   <h3>unsorted</h3>
