--- a/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
@@ -1,4 +1,4 @@
-<div class="row em-feature-header">
+<!-- <div class="row em-feature-header">
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
     <ul class="nav navbar-nav nav-justified">
@@ -14,7 +14,7 @@
     </ul>
 
   </nav>
-</div>
+</div> -->
 
 <div class="row em-scrollable-middle">
 
