--- a/frontend/core/src/main/webapp/static/lib/idangerous/idangerous.swiper.css
+++ b/frontend/core/src/main/webapp/static/lib/idangerous/idangerous.swiper.css
@@ -18,7 +18,7 @@ Basic Swiper Styles
 ================================================================*/
 /* Specify Swiper's Size: */
 .swiper-container, .swiper-slide {
-	
+	width: 100%;
 	height: 100%;
 }
 
