Logo polished. Removed logo text from other pages (!= login page)

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -187,15 +187,26 @@ ul.em-headers {
   }
 }
 
-.em-logo {
-  img {
-    width: 185px;
-  }
+.em-logo-general {
   margin-bottom: 1em;
   margin-top: 3em;
   background-repeat: no-repeat;
   span {
     display: none;
+  }
+}
+
+.em-logo-with-text {
+  .em-logo-general;
+  img {
+    width: 180px;
+  }
+}
+
+.em-logo-only {
+  .em-logo-general;
+  img {
+    width: 84px;
   }
 }
 
