--- a/frontend/core/src/main/webapp/static/partials/mySlides.html
+++ b/frontend/core/src/main/webapp/static/partials/mySlides.html
@@ -1,7 +1,26 @@
+<div em-header></div>
+
 <div class="swiper-container" swiper-directive>
+
   <div class="swiper-wrapper">
-    <div class="swiper-slide" my></div>
-    <div class="swiper-slide" tasks></div>
-    <div class="swiper-slide" today></div>
+    <div class="swiper-slide em-scrollable-top" my></div>
+    <div class="swiper-slide em-scrollable-middle" tasks></div>
+    <div class="swiper-slide em-scrollable-middle" today></div>
+  </div>
+</div>
+
+<div ng-switch="slideIndex">
+  <div ng-switch-default>
+    <div class="row em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
+  </div>
+  <div ng-switch-when=0>
+    <div class="row em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
+  </div>
+  <div ng-switch-when=1>
+    <!-- <div class="row em-menu-footer" em-navbar-footer mainlinksfilter="newItem.title"></div> -->
+    <span>tasks</span>
+  </div>
+  <div ng-switch-when=2>
+    <div class="row em-menu-footer" em-footer mainlinksfilter="newItem.title"></div>
   </div>
 </div>
